--- a/ecom_project1/templates/nav.html
+++ b/ecom_project1/templates/nav.html
@@ -30,7 +30,7 @@
         </li>
         {% endif %}
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fas fa-phone-alt"></i></a>
+          <a class="nav-link" href="{% url 'ecom_project1app:cc' %}"><i class="fas fa-phone-alt"></i></a>
         </li>
       </ul>
       <form class="d-flex" role="search" action="{% url 'search_app:SearchResult' %}" method="get">
