--- a/ecom_project1/templates/all_products.html
+++ b/ecom_project1/templates/all_products.html
@@ -20,7 +20,7 @@
         <div class="col-sm-3" style="margin-bottom:18px; margin-top:25px;">
             <div class="shadow card text-center" style="width:18rem; height:19rem;">
                 <div class="card-img-top">
-                <a href="{{allproducts.get_url}}"><img src="{{allproducts.image.url}}" width="230px" height="200px" alt="{{product.name}}"></a>
+                <a href="{{allproducts.get_absolute_url}}"><img src="{{allproducts.image.url}}" width="230px" height="200px" alt="{{product.name}}"></a>
                 </div>
             <div class="card-body">
                 <h4 style="font-size:17px;"><b>{{allproducts.name}}</b></h4>
