--- a/ecom_project1/templates/search.html
+++ b/ecom_project1/templates/search.html
@@ -16,7 +16,7 @@
         <div class="col-sm-4" style="margin-bottom:25px;">
             <div class="shadow card text-center" style="width:18rem; height:22rem;">
                 <div class="card-img-top">
-                <a href="{{product.get_url}}"><img src="{{product.image.url}}" width="230px" height="220px" alt="{{product.name}}"></a>
+                <a href="{{product.get_absolute_url}}"><img src="{{product.image.url}}" width="230px" height="220px" alt="{{product.name}}"></a>
                 </div>
             <div class="card-body">
                 <h4><b>{{product.name}}</b></h4>
